<resources>
    <string name="app_name">Expenditure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn">ADD ITEM</string>
    <string name="rate">Rate US</string>
    <string name="user">username@gmail.com</string>
    <string name="category">Category</string>
    <string name="email">email</string>
    <string name="balance">INCOME BALANCE</string>
    <string name="sum">TOTAL EXPENSE :</string>
    <string name="signOut">SIGN OUT</string>
    <string name="create">CREATE ACCOUNT</string>
    <string name="confirm">confirm password</string>
    <string name="username">username</string>

    <string name="pwd">password</string>
    <string name="account">FORGOT PASSWORD?</string>
    <string name="login"> LOGIN TO ACCOUNT</string>
    <string name="EditText1">Name</string>
    <string name="EditText2">Price</string>
    <string name="EditText3">Date</string>
    <string name="btn2">VIEW ITEMS</string>
    <string name="title_activity_list_item">ListItemActivity</string>
    <string name="price">Kshs %s</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="version">v.1.0</string>
    <string name="copyright">Copyright</string>


    <string-array name="drawer_list">
        <item>Profile</item>
        <item>Account Balance</item>
        <item>Total Expense</item>
        <item>Category</item>
        <item>Settings</item>
        <item>Log Out </item>
    </string-array>
    <string name="title_activity_expenses_list">ExpensesList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
