<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">





        <EditText
            android:id="@+id/REdit1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/REdit2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    <EditText
        android:layout_marginTop="10dp"
            android:id="@+id/REdit3"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    <EditText
        android:layout_marginTop="10dp"
            android:id="@+id/REdit4"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    <Button
        android:id="@+id/createButton"
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create"
        android:background="@color/black"
        android:textColor="@color/gold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/RegisterText"
        android:layout_marginTop="5dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"/>

</LinearLayout>