<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddItemActivity"
    android:background="@color/gold">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="QUANTITY"
        android:inputType="number"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/edit2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/EditText1"
        android:textColorHint="@color/white"
        />

    <EditText
        android:layout_marginBottom="30dp"
        android:id="@+id/edit3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/EditText3"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/edit4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/EditText2"
        android:inputType="number"
        android:textColorHint="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:background="@color/black"
            android:id="@+id/add_item_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn"
            android:textSize="20sp"
            android:onClick="savedItems"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"/>

        <Button
            android:textColor="@color/white"
            android:background="@color/black"
            android:id="@+id/view_item_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn2"
            android:textSize="20sp"
            android:onClick="viewSpend"/>

    </LinearLayout>

</LinearLayout>