<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_person_black_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rect_edittext"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:src="@drawable/ic_person_black_24dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rect_edittext"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:src="@drawable/ic_vpn_key_black_24dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>
    <Button
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:background="@color/black"
        android:textColor="@color/gold"
        android:textSize="18sp"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/account"/>

</LinearLayout>